# game-of-life

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  makefile
include/: Args.hpp  GameOfLife.hpp  common.hpp
include/TUI/: ScreenBuffer.hpp  TUI.hpp  Term.hpp
src/: Args.cpp  GameOfLife.cpp  common.cpp  main.cpp
src/TUI/: ScreenBuffer.cpp  TUI.cpp  Term.cpp
